--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <div class="inputs">
-      <input type="text" placeholder="Search Giphy" id="userInput">
+      <input id="userInput" placeholder="Search Giphy"  type="text">
       <button id="searchBtn">Search</button>
+      <button id="showFavBtn">Show Favorites</button>
     </div>
     <div class="container"><h2>Results</h2></div>
     <div class="favorites"><h2>My Favorites</h2></div>
